--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
         "redux": "^4.1.2",
         "redux-thunk": "^2.4.1",
         "rxjs": "^7.4.0",
-        "throttle-debounce": "^3.0.1"
+        "throttle-debounce": "^3.0.1",
+        "validator": "^13.7.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.16.0",
