--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
         "client"
     ],
     "scripts": {
-        "start": "NOTEBOOK_JWT_IMPERSONATE_KEY=asdf1234lkjh concurrently -n server-build,server,client -c blueBright,greenBright \"npm run -w server build:watch\" \"npm run -w server start:serve\" \"npm run -w client start:dev\"",
+        "start": "NOTEBOOK_JWT_IMPERSONATE_KEY=asdf1234lkjh NOTEBOOK_CORS_BYPASS_KEY=7f9a446d5b9e68aeb95fd8d20905e2971145de750f46060b1b08f67103d8c1120555af46f13dfac59abbedab06ededf325cc4c9f5b4c1b1e878b1f5be9e8e929 concurrently -n server-build,server,client -c blueBright,greenBright \"npm run -w server build:watch\" \"npm run -w server start:serve\" \"npm run -w client start:dev\"",
         "start:client": "npm run -w client start:dev",
-        "start:server": "NOTEBOOK_JWT_IMPERSONATE_KEY=asdf1234lkjh concurrently -n server-build,server,client -c blueBright,greenBright \"npm run -w server build:watch\" \"npm run -w server start:serve\"",
+        "start:server": "NOTEBOOK_JWT_IMPERSONATE_KEY=asdf1234lkjh NOTEBOOK_CORS_BYPASS_KEY=7f9a446d5b9e68aeb95fd8d20905e2971145de750f46060b1b08f67103d8c1120555af46f13dfac59abbedab06ededf325cc4c9f5b4c1b1e878b1f5be9e8e929 concurrently -n server-build,server,client -c blueBright,greenBright \"npm run -w server build:watch\" \"npm run -w server start:serve\"",
         "rebuild-db": "npm run build -w server && npm run schema:drop && npm run schema:sync && npm run seed:run",
         "schema:drop": "node ./node_modules/typeorm/cli.js schema:drop",
         "schema:sync": "node ./node_modules/typeorm/cli.js schema:sync",
