--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,13 @@
     "version": "1.0.0",
     "main": "main.js",
     "scripts": {
+        "start:docker": "docker compose -f docker-compose.dev.yml up -d",
+        "start:conc": "concurrently -n server-build,server -c blueBright,greenBright \"npm run build:watch\" \"npm run start:serve\"",
         "start": "node ./dist/main",
         "start:dev": "node start -- --enable-source-maps",
-        "start:serve": "wait-on ./dist/main.js && nodemon --enable-source-maps --inspect dist/main",
+        "start:serve": "wait-on ./dist/main.js && nodemon --enable-source-maps --inspect -L dist/main",
+        "start:env": "docker-compose -f docker-compose.env.yml up -d",
+        "stop:env": "docker-compose -f docker-compose.env.yml stop",
         "clean": "rm -rf dist",
         "build": "npm run clean && babel ./src --out-dir dist --copy-files",
         "build:dev": "npm run build -- --source-maps",
