--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,25 +1,20 @@
-FROM node:lts-alpine
+FROM node:alpine AS build
 
-ENV NODE_ENV=development
+WORKDIR /app
 
-WORKDIR /opt/notebook-server
-COPY . .
+COPY package*.json ./
 
 RUN npm install
+
+COPY . .
+
 RUN npm run build
 
-ENV NODE_ENV=production
+RUN npm prune --production
 
-ENV NOTEBOOK_DB_HOST=notebook-db.crrfthqir0s7.us-west-1.rds.amazonaws.com
-ENV NOTEBOOK_REDIS_HOST=clustercfg.notebook-cache.774mfm.memorydb.us-west-1.amazonaws.com
+FROM node:alpine AS deploy
 
-RUN npm prune
+COPY --from=build /app/node_modules node_modules
+COPY --from=build /app/dist dist
 
-RUN rm -rf src
-RUN rm *.*
-
-EXPOSE 10001
-
-RUN chown -R node /opt/notebook-server
-USER node
-CMD ["node", "dist/main"]
+ENTRYPOINT ["node","dist/main"]
