--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@main
         
       - name: Generate package
-        run: zip -r deployment-package.zip * -x "**node_modules**"
+        run: zip -r deployment-package.zip server/* -x "**node_modules**"
         
       - name: Get timestamp
         uses: gerred/actions/current-time@master
