--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -4,9 +4,7 @@ services:
     notebook-server:
         container_name: notebook-server
         restart: unless-stopped
-        build:
-            context: .
-            dockerfile: Dockerfile
+        build: '.'
         ports:
             - "80:80"
         environment:
