--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,24 +21,7 @@ jobs:
     steps:
       - name: Checkout latest repo
         uses: actions/checkout@main
-        
-      - name: Generate package
-        working-directory: server
-        run: zip -r deployment-package.zip * -x "**node_modules**"
-        
-      - name: Get timestamp
-        uses: gerred/actions/current-time@master
-        id: current-time
-        
-      - name: Format timestamp
-        uses: frabert/replace-string-action@master
-        id: format-time
-        with:
-          pattern: '[:\.]+'
-          string: '${{ steps.current-time.outputs.time }}'
-          replace-with: '-'
-          flags: 'g'
-          
+
       - name: Deploy
         uses: einaregilsson/beanstalk-deploy@v20
         with:
@@ -48,4 +31,4 @@ jobs:
           application_name: notebook-server
           environment_name: Notebookserver-env
           version_label: "notebook-server-deployment-${{ steps.format-time.outputs.replaced }}"
-          deployment_package: server/deployment-package.zip
+          deployment_package: server/docker-compose.yml
