--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,30 @@ jobs:
       - name: Checkout latest repo
         uses: actions/checkout@main
 
+      - name: Generate package
+        working-directory: server
+        run: zip -r deployment-package.zip * -x "**node_modules**"
+
+      - name: Get timestamp
+        uses: gerred/actions/current-time@master
+        id: current-time
+
+      - name: Format timestamp
+        uses: frabert/replace-string-action@master
+        id: format-time
+        with:
+          pattern: '[:\.]+'
+          string: '${{ steps.current-time.outputs.time }}'
+          replace-with: '-'
+          flags: 'g'
+
       - name: Deploy
         uses: einaregilsson/beanstalk-deploy@v20
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           region: us-west-1
-          application_name: notebook-server
-          environment_name: Notebookserver-env
+          application_name: notebook-docker-eb
+          environment_name: Notebookdockereb-env
           version_label: "notebook-server-deployment-${{ steps.format-time.outputs.replaced }}"
-          deployment_package: server/docker-compose.yml
+          deployment_package: server/deployment-package.zip
