--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,4 +10,11 @@ COPY . .
 
 RUN npm run build
 
+RUN npm prune --production
+
+FROM node:alpine AS deploy
+
+COPY --from=build /app/node_modules node_modules
+COPY --from=build /app/dist dist
+
 ENTRYPOINT ["node","dist/main"]
